# RustyFlengine

./: Cargo.toml
src/: datamodel.rs  main.rs
src/controller/: mod.rs
src/converter/: converter.rs  mod.rs  organizer.rs  request_handler.rs
src/datamodel/: board.rs  chess_move.rs  enums.rs  field.rs  options.rs  piece.rs
src/datamodel/enums/: color.rs  difficulty.rs  file.rs  piece_type.rs  rank.rs
src/logging/: mod.rs
src/move_provider/: endgame.rs  mod.rs  move_provider.rs  openings.rs
src/move_provider/minmax/: min_max.rs  mod.rs  recursive_minmax_task.rs
src/move_provider/negamax/: mod.rs  negamax.rs  recursive_negamax_task.rs
src/rules/: mod.rs  piece_rule.rs
