[package]
name = "FlenginePort"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
log = "0.4.25"
serde = { version = "1.0.217", features = ["derive"] }
itertools = "0.14.0"
strum = "0.26"
strum_macros = "0.26"
rayon = "1.10.0"